fixed header collapse

--- a/src/components/header-main/header-main.styles.scss
+++ b/src/components/header-main/header-main.styles.scss
@@ -1,164 +1,162 @@
-
 .header-custom {
-    top: 0;
-    background-color: black;
-    box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-    position: fixed;
-    width: 100%;
-    z-index: 3;
-    min-width: 340px;
-  }
-  
-  .header-custom ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    overflow: hidden;
-    background-color: black;
-  }
-  
-  .header-custom li a {
-    display: block;
-    padding: 20px 20px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: white;
-    font-size: 16px;
-    margin-right: -1rem;  
-  }
-  
-  .header-custom li a:hover,
-  .header-custom .menu-btn:hover {
-    color: orangered;
-  }
-  
-  .header-custom .logo-custom {
-    display: block;
-    float: left;
-    margin-top: 0.4rem;
-    margin-left: 0.8rem;
+  top: 0;
+  background-color: black;
+  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+  min-width: 340px;
+}
 
-    background-size: cover;
-    height: 3rem;
-    width: 15rem;
-    background-image: url('../../assets/logo-img.svg')
+.header-custom ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: black;
+}
+
+.header-custom li a {
+  display: block;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+  margin-right: -1rem;  
+}
+
+.header-custom li a:hover,
+.header-custom .menu-btn:hover {
+  color: orangered;
+}
+
+.header-custom .logo-custom {
+  display: block;
+  float: left;
+  margin-top: 0.4rem;
+  margin-left: 0.8rem;
+
+  background-size: cover;
+  height: 3rem;
+  width: 15rem;
+  background-image: url('../../assets/logo-img.svg')
+}
+
+/* menu */
+
+.header-custom .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+}
+
+/* menu icon */
+
+.header-custom .menu-icon {
+  cursor: pointer;
+  display: block;
+  float: right;
+  margin: 38px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header-custom .menu-icon .navicon {
+  background: #333;
+  display: block;
+  height: 4px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.781);
+}
+
+.header-custom .menu-icon .navicon:before,
+.header-custom .menu-icon .navicon:after {
+  background: #333;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0.781);
+}
+
+.header-custom .menu-icon .navicon:before {
+  top: 4.6px;
+}
+
+.header-custom .menu-icon .navicon:after {
+  top: -4.6px;
+}
+
+/* menu btn */
+
+.header-custom .menu-btn {
+  display: none;
+}
+
+.header-custom .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+
+.header-custom .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header-custom .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header-custom .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header-custom .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header-custom .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+  background-color: rgba(255, 255, 255, 0.781);
+  height: 8px;
+}
+
+/* 48em = 768px */
+
+@media (min-width: 60em) {
+  .header-custom li {
+    float: left;
   }
-  
-  /* menu */
-  
+  .header-custom li a {
+    padding: 20px 30px;
+  }
   .header-custom .menu {
-    clear: both;
-    max-height: 0;
-    transition: max-height .2s ease-out;
-  }
-  
-  /* menu icon */
-  
-  .header-custom .menu-icon {
-    cursor: pointer;
-    display: block;
+    clear: none;
     float: right;
-    margin: 38px 20px;
-    position: relative;
-    user-select: none;
+    max-height: none;
   }
-  
-  .header-custom .menu-icon .navicon {
-    background: #333;
-    display: block;
-    height: 4px;
-    position: relative;
-    transition: background .2s ease-out;
-    width: 40px;
-    background-color: rgba(255, 255, 255, 0.781);
-  }
-  
-  .header-custom .menu-icon .navicon:before,
-  .header-custom .menu-icon .navicon:after {
-    background: #333;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0.781);
-  }
-  
-  .header-custom .menu-icon .navicon:before {
-    top: 4.6px;
-  }
-  
-  .header-custom .menu-icon .navicon:after {
-    top: -4.6px;
-  }
-  
-  /* menu btn */
-  
-  .header-custom .menu-btn {
+  .header-custom .menu-icon {
     display: none;
   }
-  
-  .header-custom .menu-btn:checked ~ .menu {
-    max-height: 240px;
-  }
-  
-  
-  .header-custom .menu-btn:checked ~ .menu-icon .navicon {
-    background: transparent;
-  }
-  
-  .header-custom .menu-btn:checked ~ .menu-icon .navicon:before {
-    transform: rotate(-45deg);
-  }
-  
-  .header-custom .menu-btn:checked ~ .menu-icon .navicon:after {
-    transform: rotate(45deg);
-  }
-  
-  .header-custom .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-  .header-custom .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-    top: 0;
-    background-color: rgba(255, 255, 255, 0.781);
-    height: 8px;
-  }
-  
-  /* 48em = 768px */
-  
-  @media (min-width: 48em) {
-    .header-custom li {
-      float: left;
-    }
-    .header-custom li a {
-      padding: 20px 30px;
-    }
-    .header-custom .menu {
-      clear: none;
-      float: right;
-      max-height: none;
-    }
-    .header-custom .menu-icon {
-      display: none;
-    }
-  }
+}
 
-  @media (max-width: 905px) {
-    .header-custom li a{
-      font-size: 14px;
-      margin-left: -1.5rem;
-    }
+@media (max-width: 1033px) {
+  .header-custom li a{
+    font-size: 14px;
   }
-  
+}
+
 .fadein { 
-    animation: fadeInAnimation ease 0.5s; 
-    animation-iteration-count: 1; 
-    animation-fill-mode: forwards; 
+  animation: fadeInAnimation ease 0.5s; 
+  animation-iteration-count: 1; 
+  animation-fill-mode: forwards; 
 } 
 @keyframes fadeInAnimation { 
-    0% { 
-        opacity: 0; 
-    } 
-    100% { 
-        opacity: 1; 
-    } 
+  0% { 
+      opacity: 0; 
+  } 
+  100% { 
+      opacity: 1; 
+  } 
 } 
